--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -22,3 +22,10 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+
+/* #erd {
+  max-width: 100%;
+  height: auto;
+
+} */
